--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -5,7 +5,7 @@
 			<p>{{lang.newsletter-descript}}</p>
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
-        <form action="//sabznameh.us1.list-manage.com/subscribe/post?u=7fdb14e291091d23007369520&amp;id=9238ab4edd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="//iranopendata.us1.list-manage.com/subscribe/post?u=7fdb14e291091d23007369520&amp;id=9238ab4edd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
             <div class="mc-field-group">
               <input type="email" placeholder="Enter Email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
