--- a/app/assets/styles/main_rtl.scss
+++ b/app/assets/styles/main_rtl.scss
@@ -15,6 +15,7 @@ body {
   direction: rtl;
   text-align: right;
   font-family: 'rtlFont';
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,6 +39,11 @@ h1, h2, h3, h4, h5, h6 {
   &:nth-of-type(3n) {
     clear: left;
   }
+}
+
+.metadata-descript {
+  margin-right: initial;
+  margin-left: .5em;
 }
 
 .label-form {
