--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -43,7 +43,7 @@ The following part removes dulpicated categories and invalid categories like bla
 				<ul class="list-type-none dropdown-resources-options">
 					{% for category in categories %}
 					<li class="list-item-filter link-filter">
-            <a href="/{{page.lang}}/resources#{{category | split:' ' | join:'-'}}">{{category}} <span class="filter-number">(2)</span></a>
+            <a href="/{{page.lang}}/resources#{{category | downcase | split:' ' | join:''}}">{{category}} <span class="filter-number">(2)</span></a>
 					</li>
 					{% endfor %}
 				</ul>
@@ -51,7 +51,7 @@ The following part removes dulpicated categories and invalid categories like bla
 		</div>
 		<div class="content-sidebar">
 			{% for category in categories %}
-			<div id="{{category | split:' ' | join:'-'}}" class="faux-list-item">
+			<div id="{{category | downcase | split:' ' | join:''}}" name="{{category | downcase | split:' ' | join:''}}" class="faux-list-item">
 				<h4 class="header-divider">{{category}}</h4>
 				<ul class="list-type-none">
 					{% for resource in site.resources %}
