Fix Learn More button

--- a/app/_layouts/developers.html
+++ b/app/_layouts/developers.html
@@ -23,6 +23,6 @@ layout: default
         {{post.content}}
       {% endif %}
     {% endfor %}
-    <a class="button" href="">Learn More</a>
+    <a class="button" href="/{{page.lang}}/about">{{lang.methodology-button}}</a>
   </div>
 </section>
