Fix datasets button

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -25,7 +25,7 @@
     <div class="wrapper-half wrapper-half-right">
       <nav class="float-right">
         <ul class="list-type-none">
-          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/datasets/">{{lang.data}}</a></li>
           <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
           <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
           <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
