Add facebook to language

--- a/app/_layouts/contact.html
+++ b/app/_layouts/contact.html
@@ -31,7 +31,7 @@ layout: default
 		</form>
 		<div class="subsection subsection-bold content-centered">
 			<h2 class="header-centered">{{lang.other-ways}}</h2>
-			<a class="button button-xl" href="https://www.facebook.com/iranopendata/">Facebook</a>
+      <a class="button button-xl" href="https://www.facebook.com/iranopendata/">{{lang.Facebook}}</a>
 			<a class="button button-xl button-secondary" href="https://github.com/orgs/iranopendata/">{{lang.github}}</a>
 		</div>
 	</div>
