all farsi text throughout

--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -23,7 +23,11 @@ layout: default
      'button-cancel': '{{lang.button-cancel}}',
      'sortby-option1': '{{lang.sortby-option1}}',
      'sortby-option2': '{{lang.sortby-option2}}',
-     'datasets-updated': '{{lang.datasets-updated}}',
-     'datasets-source': '{{lang.datasets-source}}'
+     'dataset-updated': '{{lang.dataset-updated}}',
+     'datasets-source': '{{lang.datasets-source}}',
+     'to': '{{lang.to}}',
+     'source': '{{lang.source}}',
+     'showing': '{{lang.showing}}',
+     'datasets': '{{lang.datasets}}'
  }
 </script>
