fix javascript variable name

--- a/app/_layouts/dataset.html
+++ b/app/_layouts/dataset.html
@@ -50,7 +50,7 @@ layout: default
 {% endif %}
 <script>
  const DATASET_ID = `{{page.id}}`;
- const labels = {
+ const lang = {
      'button-share': '{{lang.button-share}}',
      'button-download': '{{lang.button-download}}',
      'dataset-id': '{{lang.dataset-id}}',
