--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -37,6 +37,9 @@
     </div>
   </div>
 </footer>
+<script>
+  const PAGE_LANG = '{{page.lang}}';
+</script>
 
 <!-- build:js /assets/scripts/vendor.js -->
 <script src="/assets/scripts/vendor.js"></script>
@@ -54,3 +57,4 @@ ga('create', 'UA-85690996-1', 'auto');
 ga('send', 'pageview');
 
 </script>
+
