--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -419,15 +419,13 @@ img {
 }
 
 .overlay-description {
-	padding: 1.5em 3em 2em;
+	padding: 1.5em 3% 3%;
 	border: 1px solid $light-grey;
 	border-top: 3px solid $black;
 	position: absolute;
-	bottom: 6px;
-	/*width: 92%;*/
+	bottom: 1.4%;
+	width: 93.8%;
 	background-color: rgba(255, 255, 255, 0.8);
-	position: absolute;
-	bottom: 0;
 }
 
 .width-shortened {
