--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -14,7 +14,7 @@
               <div class="response" id="mce-error-response" style="display:none"></div>
               <div class="response" id="mce-success-response" style="display:none"></div>
             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7fdb14e291091d23007369520_9238ab4edd" tabindex="-1" value=""></div>
+            <div style="position: absolute; left: -5000px; display: none;" aria-hidden="true"><input type="text" name="b_7fdb14e291091d23007369520_9238ab4edd" tabindex="-1" value=""></div>
             <div class="clear"><input type="submit" value="{{lang.button-submit}}" name="subscribe" id="mc-embedded-subscribe" class="button button-sm button-secondary"></div>
           </div>
         </form>
