--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -32,5 +32,6 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/assets/graphics/meta/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
