--- a/app/assets/styles/_datasets.scss
+++ b/app/assets/styles/_datasets.scss
@@ -1,14 +1,15 @@
 .wrapper-datasets {
 	.sidebar {
-		@media screen and (max-width: 768px) {
+		@media screen and (max-width: 766px) {
 			display: none;
 		}
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 766px) {
 			display: initial;
+			margin-right: 3%;
 		}
 	}
 	.open {
-		@media screen and (max-width: 768px) {
+		@media screen and (max-width: 766px) {
 			display: initial;
 		}
 	}
