--- a/app/assets/styles/main_rtl.scss
+++ b/app/assets/styles/main_rtl.scss
@@ -23,7 +23,7 @@ body {
   font-size: .8em;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, b, strong {
 	font-family: 'rtlBold', 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -319,14 +319,6 @@ nav {
       float: right;
       margin-right: 0;
       margin-left: 4%;
-    }
-  }
-}
-
-.wrapper-content-about {
-  p {
-    &:nth-of-type(3) {
-      float: right;
     }
   }
 }
