--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -9,7 +9,8 @@ The following part extracts all the categories from your resources and sort cate
 =======================
 {% endcomment %}
 {% assign rawcategories = "" %}
-{% for resource in site.resources %}
+{% assign resources = site.resources | where: 'lang', page.lang %}
+{% for resource in resources %}
 	{% assign rawcategories = rawcategories | append:resource.category | append:'|' %}
 {% endfor %}
 {% assign rawcategories = rawcategories | split:'|' | sort %}
@@ -54,7 +55,7 @@ The following part removes dulpicated categories and invalid categories like bla
 			<div id="{{category | downcase | split:' ' | join:''}}" name="{{category | downcase | split:' ' | join:''}}" class="faux-list-item">
 				<h4 class="header-divider">{{category}}</h4>
 				<ul class="list-type-none">
-					{% for resource in site.resources %}
+					{% for resource in resources %}
 						{% if resource.category == category %}
 						<li class="list-item-block">
 							<h5 class="header-with-description"><a class="text-link" target="_blank" href="{{resource.link}}">{{resource.title}}</a></h5>
