--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-featured1: nocrcd1693
+featured1: nocrhsp168
 featured2: mhmelih16
 ---
 {% assign lang = site.data[page.lang][0] %}
